Non functional updates.
* Updated documentation.
* Added more custom Twig filters and functions.
* Changed class template.
* Add flag to turn on scalar type hints.
* Add setter for keys in JSON that have an object as their first element.

--- a/templates/class-php.twig
+++ b/templates/class-php.twig
@@ -23,6 +23,9 @@ class {{className}}
         {% for classProp in classProperties -%}
         {{ setProperty(classProp.name, classProp.value, classProp.type) }}
         {%- endfor %}
+        {% spaceless %}
+            $this->{{ classProp.name }} = {{ classProp.value }};
+        {% endspaceless %}
     }
     {% for classProp in classProperties %}
 
@@ -42,9 +45,9 @@ class {{className}}
      * @param {{classProp.type}} ${{classProp.name|ucfirst}}
      * @return \{{fullClassName}}
      */
-    public function set{{classProp.name|capitalize}}({% if classProp.paramType is not empty %}{{classProp.paramType}} {% endif %}${{classProp.name}})
+    public function set{{classProp.name|ucfirst}}({{getFuncType(classProp)}}${{classProp.name}})
     {
-        $this->{{classProp.name}} = ${{classProp.name}};
+        $this->{{getAssignProp(classProp)}} = ${{classProp.name}};
 
         return $this;
     }
