Add ability to place unit test in separate directory.

--- a/templates/class-unit-php.twig
+++ b/templates/class-unit-php.twig
@@ -9,7 +9,7 @@ use {{fullClassName}};
  *
  * @coversDefaultClass \{{fullClassName}}
  */
-class {{className}}Tests
+class {{className}}Tests extends \PHPUnit_Framework_TestCase
 {
     {% for classProp in classProperties %}
 
