--- a/templates/class-unit-php.twig
+++ b/templates/class-unit-php.twig
@@ -1,5 +1,6 @@
 <?php {%- if classNamespace is not empty %} namespace {{classNamespace}}\Tests; {% endif %}
 
+{% autoescape false %}
 {% set fullClassName = getFullNameSpace(classNamespace, className) %}
 
 use {{fullClassName}};
@@ -11,32 +12,65 @@ use {{fullClassName}};
  */
 class {{className}}Tests extends \PHPUnit_Framework_TestCase
 {
-    {% for classProp in classProperties %}
+{% for classProp in classProperties %}
 
     /**
-     * @covers ::get{{classProp.name|capitalize}}
-     * @covers ::set{{classProp.name|capitalize}}
+     * @covers ::get{{classProp.name|ucfirst}}
+     * @covers ::set{{classProp.name|ucfirst}}
      * @uses \{{fullClassName}}::__construct
      */
-    public function testCanSetAndGet{{classProp.name|capitalize }}()
+    public function testCanSetAndGet{{classProp.name|ucfirst }}()
     {
         $subject = new {{className}}();
+    {% if classProp.arrayType is not empty %}
 
-    {% if classProp.isCustomType %}
+        $mock = $this->getMockBuilder(\{{ getFullNameSpace(classNamespace, classProp.arrayType) }}::class)
+            ->disableOriginalConstructor()
+            ->getMock();
+        $subject->set{{ classProp.name|ucfirst }}($mock);
+    {% elseif classProp.isCustomType %}
+
+        $mock = $this->getMockBuilder(\{{ getFullNameSpace(classNamespace, classProp.type) }}::class)
+        ->disableOriginalConstructor()
+        ->getMock();
+
+        $subject->set{{classProp.name|ucfirst}}($mock);
+        $actual = $subject->get{{classProp.name|ucfirst}}();
+
+        $this->assertInstanceOf(\{{ getFullNameSpace(classNamespace, classProp.type) }}::class, $actual);
     {% else %}
-        $subject->set{{classProp.name|capitalize}}({{classProp.value}});
-        $actual = $subject->get{{classProp.name|capitalize}}();
+
+        {% if classProp.type is same as('boolean') %}
+            {% set fixture = 'true' %}
+        {% elseif classProp.type is same as('integer') %}
+            {% set fixture = '1234' %}
+        {% elseif classProp.type is same as('NULL') %}
+            {% set fixture = 'null' %}
+        {% elseif classProp.type is same as('string') %}
+            {% set fixture = "'test1234'" %}
+        {% else %}
+            {% set fixture = classProp.value %}
+        {% endif %}
+        $subject->set{{classProp.name|ucfirst}}({{ fixture }});
+
+        $actual = $subject->get{{classProp.name|ucfirst}}();
 
         {% if classProp.type is same as('NULL') -%}
             $this->assertNull($actual);
         {%- elseif classProp.type is same as('string') -%}
-            $this->assertEquals('{{classProp.value}}', $actual);
+            $this->assertEquals('test1234', $actual);
+        {%- elseif classProp.type is same as('boolean') -%}
+            $this->assertTrue($actual);
+        {%- elseif classProp.type is same as('integer') and classProp.value -%}
+            $this->assertEquals(1234, $actual);
         {%- else -%}
-            $this->assertEquals({{classProp.value}}, $actual);
+            $this->assertEquals({{fixture}}, $actual);
         {% endif %}
     {% endif %}
-    }
-    {% endfor %}
 
+    }
+{% endfor %}
 }
+
+{% endautoescape %}
 ?>
