Resolved #3 to allow setting access level.
Add functionality to set the default property access level from
the command line.

--- a/templates/class-php.twig
+++ b/templates/class-php.twig
@@ -12,7 +12,7 @@ class {{className}}
     /**
      * {{ getVarType(classProp, classNamespace) }}
      */
-    private ${{classProp.name}};
+    {{classProp.access}} ${{classProp.name}};
     {% endfor %}
 
     /**
