Resolved #4 - Add callback to allow modifying the render data.
This change allows you to add callback the will be invoked
before the source is rendered through the template. Giving the
added ability to alter the output that will be generated.

--- a/templates/class-php.twig
+++ b/templates/class-php.twig
@@ -1,12 +1,15 @@
 <?php {%- if classNamespace is not empty %} namespace {{classNamespace}};{% endif %}
 {% autoescape false %}
 {% set fullClassName = getFullNameSpace(classNamespace, className) %}
+{{ useStmts }}
 
 /**
  * Class {{className}}
  */
-class {{className}}
+class {{className}}{{ classAttrs }}
 {
+    {{- traitStmts -}}
+
     {%- for classProp in classProperties %}
 
     /**
