--- a/templates/phpunit.xml
+++ b/templates/phpunit.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/5.6/phpunit.xsd"
-         backupStaticAttributes="false"
+<phpunit backupStaticAttributes="false"
          beStrictAboutChangesToGlobalState="true"
          beStrictAboutOutputDuringTests="true"
          beStrictAboutTestsThatDoNotTestAnything="true"
@@ -12,7 +10,7 @@
          verbose="true">
     <testsuites>
         <testsuite name="All">
-            <directory>tests/Jtp</directory>
+            <directory>{{ unitTestDir }}</directory>
         </testsuite>
     </testsuites>
     <filter>
@@ -20,7 +18,7 @@
             <directory>.</directory>
         </blacklist>
         <whitelist>
-            <directory suffix=".php">./src</directory>
+            <directory suffix=".php">{{ sourceDir }}</directory>
         </whitelist>
     </filter>
     <logging>
